src/App.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap');

@font-face {
  font-family: Minecrafter;
  src: url(./fonts/minecrafter.ttf);
}

@keyframes growFadeIn {
  0% {
    opacity: 0;
    max-height: 0px;
  }

  100% {
    opacity: 1;
    max-height: 400px;
  }
}

.app {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  background: url(bg.jpg);
  background-size: cover;
  background-position: center;
}

.app-body {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  flex: 1 1 auto;
}

.logo {
  display: flex;
  width: 380px;
  opacity: 1;
  user-select: none;
  transition: width linear 100ms, height linear 100ms, opacity linear 100ms;
}

.logo.shrunk {
  width: 160px;
  opacity: 0.9;
}

.logo-container {
  display: flex;
  flex: 0 0 320;
  padding: 32px;
  justify-content: center;
}

.page {
  display: flex;
  flex-direction: column;
  font-family: Minecrafter;
  font-size: 1.2rem;
  background-color: rgba(0,0,0,0.5);
  padding: 20px 32px;
  overflow: hidden;
  color: white;
  margin-top: 32px;
  max-width: 600px;
  border-radius: 8px;
  text-shadow: 0 2px 3px rgba(0,0,0,0.2);
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  animation: growFadeIn linear 200ms;
}

.page-actions {
  display: flex;
  flex-direction: row-reverse;
  margin-top: 4px;
  margin-bottom: 16px;
}

.close-page {
  color: #cccccc;
  font-size: 1.4rem;
  transition: color linear 100ms;
  cursor: pointer;
}

.close-page:hover {
  color: white;
}

.navbar {
  font-family: Minecrafter;
  font-size: 1.4rem;
  display: flex;
  border-radius: 8px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.launcher-page {
  min-width: 700px;
} 

.launcher-info {
  display: flex;
  justify-content: center;
  font-size: 1.6rem;
}

.launcher-buttons {
  display: flex;
  justify-content: space-around;
  padding: 16px;
}

.tos {
  color: orange;
  cursor: pointer;
}

.tos-footer {
  color: white;
  font-family: Montserrat;
  font-size: 1.1rem;
  margin-top: 8px;
  font-weight: 600;
  opacity: 0.75;
  cursor: pointer;
  text-shadow: 0 1px 2px rgba(0,0,0,0.4);
  transition: opacity linear 200ms;
}

.tos-footer:hover {
  opacity: 1;
}


.navbar-link, .btn-launcher {
  display: flex;
  justify-content: center;
  background-color: rgba(0,0,0,0.5);
  padding: 20px 32px;
  cursor: pointer;
  user-select: none;
  color: #dddddd;
  text-shadow: 0 2px 3px rgba(0,0,0,0.2);
  transition: background-color linear 100ms, color linear 100ms;
}

.navbar-link:hover, .btn-launcher:hover {
  color: white;
  background-color: rgba(255, 145, 0,0.5);
}

.btn-launcher {
  font-size: 2rem;
  border-radius: 8px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.4);
}

.btn-launcher.disabled {
  color: #bbbbbb;
  cursor: default;
  background-color: rgba(0,0,0,0.2);
}

.btn-launcher.disabled:hover {
  color: #bbbbbb;
  cursor: default;
  background-color: rgba(0,0,0,0.2);
}

.navbar-link:first-child {
  border-radius: 8px 0 0 8px;
}

.navbar-link:last-child {
  border-radius: 0 8px 8px 0;
}

.social-links {
  display: flex;
  margin-top: 64px;
  justify-content: space-between;
  box-sizing: content-box;
}

.social-link {
  cursor: pointer;
  font-size: 1.5rem;
  padding: 8px;
  box-shadow: inset 0 0 4px 4px rgba(255,255,255,0), 0 2px 4px 0 rgba(0,0,0,0.2);
  margin: 8px;
  display: flex;
  flex: 0 0 1.5rem;
  align-items: center;
  justify-content: center;
  border-radius: 4px;
  color: white;
  transition: box-shadow linear 100ms;
}

.social-link:hover {
  box-shadow: inset 0 0px 4px 4px rgba(255,255,255,0.1), 0 2px 4px 0 rgba(0,0,0,0.2);
}

.sl-teamspeak {
  background-color: #343a40;
}

.sl-twitter {
  background-color: rgb(22,160,241);
}

.sl-facebook {
  background-color: rgb(66,103,178);
}

.sl-instagram {
  background-color: crimson;
}

.sl-telegram {
  background-color: rgb(46,166,226);
}

.sl-discord {
  background-color: rgb(93,116,197);
}

.sl-github {
  background-color: rgb(36,41,46);
}

.sl-steam {
  background-color: rgba(1,123,176);
}

.sl-youtube {
  background-color: rgb(221, 8, 8);
  font-size: 1.35rem;
}

.sostienici-info, .oppure {
  display: flex;
  text-align: center;
  justify-content: center;
  margin-bottom: 24px;
  font-size: 1.5rem;
  text-shadow: 0 2px 3px rgba(0,0,0,0.2);
}

.sostienici-buttons {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.sostienici-postepay {
  font-family: Montserrat;
}

.sostienici-button {
  color: white;
  border-radius: 4px;
  display: flex;
  padding: 16px 32px;;
  align-items: center;
  justify-content: space-between;
  font-family: Minecrafter;
  margin: 8px;
  cursor: pointer;
  user-select: none;
  flex: 1 1 auto;
  text-shadow: 0 2px 3px rgba(0,0,0,0.2);
  font-size: 1.2rem;
}

.paypal-form {
  display: flex;
  
  flex: 1 1 auto;
}

.paypal-button {
  background-color: rgb(0, 112, 186);
  appearance: none;
  border: none;
  
  text-shadow: 0 2px 3px rgba(0,0,0,0.2);
}

.patreon-button {
  background-color: orange;
}

.tos-label {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 32px;
}

input[type='checkbox'] {
  appearance: none;
  border: none;
  cursor: pointer;
  width: 24px;
  height: 24px;
  display: flex;
  justify-content: center;
  align-items: center;
  box-shadow: inset 0 0 4px 0 rgba(0,0,0,0.3);
  background-color: white;
  border-radius: 4px;
}

input[type='checkbox']::after {
  content: '\2713';
  color: orange;
  font-size: 18px;
  font-weight: 600;
  transition: opacity linear 100ms;
}

input[type='checkbox']:not(:checked)::after {
  opacity: 0;
}

input[type='checkbox']:checked::after {
  opacity: 1;
}

.acme-bar {
  display: flex;
  font-family: Minecrafter;
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.4);
  background-color: rgba(0,0,0,0.6);
}

.acme-bar a {
  text-decoration: none;
  padding: 8px 12px;
  margin: 0;
  display: flex;
  align-items: center;
  font-size: 1.4rem;
  background-color: rgba(255,255,255,0);
  transition: background-color linear 200ms;
  text-shadow: 0 2px 1px rgba(0,0,0,0.2);
}

.acme-bar a:hover {
  background-color: rgba(255,255,255,0.2);
}

.acme-bar .left-links {
  flex: 0 1 auto;
  display: flex;
  justify-content: flex-start;
}

.acme-bar .right-links {
  flex: 1 1 auto;
  display: flex;
  justify-content: flex-end;
}

.acme-link, .acme-link:visited {
  color: #f55b75;
}

.vgz-link, .vgz-link:visited {
  color: greenyellow;
}

.ffp-link, .ffp-link:visited {
  color: #b849b0;
}

@media screen and (max-width: 1100px) {
  .logo {
    width: 240px;
  }

  .app {
    justify-content: space-around;
  }

  .navbar {
    flex-direction: column;
    width: 90%;
  }

  .navbar-link:first-child {
    border-radius: 8px 8px 0 0;
  }
  
  .navbar-link:last-child {
    border-radius: 0 0 8px 8px;
  }

  .social-links {
    padding-bottom: 24px;
  }

  .social-link {
    font-size: 1.1rem;
    padding: 6px;
    margin: 5px;
  }

  .pconly {
    display: none;
  }

  .tos-footer {
    margin-bottom: 16px;
  }
}

@media screen and (max-width: 600px) {
  .acme-bar {
    flex-direction: column;
  }

  .acme-bar .left-links {
    flex: 1 1 auto;
  }
  
  .acme-bar .right-links {
    flex: 1 1 auto;
    justify-content: flex-start;
    flex-direction: column;
  }

  .acme-bar a {
    display: flex;
    flex: 1 1 auto;
    font-size:0.8rem;
    align-items: center;
  }

}

